<resources>
    <string name="app_name">JavaCalculator</string>
    <string name="leftBrackets">(</string>
    <string name="rightBrackets">)</string>
    <string name="clean">c</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="plus">+</string>
    <string name="reduce">-</string>
    <string name="equal">=</string>
    <string name="point">.</string>
    <string name="reverse">1/x</string>
    <string name="square">x²</string>
    <string name="help">help</string>
    <string name="exit">exit</string>
    <string name="unitChange">长度转换</string>
    <string name="volumeChange">体积转换</string>
    <string name="baseChange">进制转换</string>
    <string name="cal">计算器</string>
    <string name="delete">Del</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
</resources>