<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:rowCount="8">

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_columnSpan="4"
        android:layout_gravity="bottom|end"
        android:gravity="top|start"
        android:textSize="50sp"
        android:background="#ccc"/>
    <Button
        android:id="@+id/button_sin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sin"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:textAllCaps="false"
        android:textSize="25sp" />
    <Button
        android:id="@+id/button_cos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/cos"
        android:textAllCaps="false"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_columnSpan="2"
        android:textSize="25sp" />
    <Button
        android:id="@+id/button_tan"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/tan"
        android:textAllCaps="false"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:textSize="25sp" />
    <Button
        android:id="@+id/button_reverse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/reverse"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_columnSpan="2"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_square"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/square"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_columnSpan="2"
        android:textSize="25sp" />


    <Button
        android:id="@+id/button_clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/clean"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_leftBrackets"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/leftBrackets"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_rightBrackets"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/rightBrackets"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_divide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/divide"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="7"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="8"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="9"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_mul"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/multiply"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="4"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="5"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="6"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_reduce"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/reduce"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="3"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/plus"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_columnSpan="2"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_point"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/point"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button_equal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/equal"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:textSize="25sp"/>


</GridLayout>