<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UnitChangeActivity"
    android:columnCount="4"
    android:rowCount="6">

    <Spinner
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/spinnerStart"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"
        android:textSize="50sp"
        android:entries="@array/spinArr"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"
        android:id="@+id/unitStart"
        android:textSize="50sp"/>

    <Spinner
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/spinnerDest"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"
        android:textSize="50sp"
        android:entries="@array/spinArr"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/unitDest"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:textSize="50sp"
        android:layout_columnSpan="2" />

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="7"
        android:id="@+id/btn_7"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1" />

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="8"
        android:id="@+id/btn_8"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1" />

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="9"
        android:id="@+id/btn_9"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1" />

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/clean"
        android:id="@+id/btn_clear"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_rowSpan="2"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="4"
        android:id="@+id/btn_4"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1" />

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="5"
        android:id="@+id/btn_5"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1" />

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="6"
        android:id="@+id/btn_6"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1" />

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="1"
        android:id="@+id/btn_1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1" />
    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="2"
        android:id="@+id/btn_2"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1" />
    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="3"
        android:id="@+id/btn_3"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1" />
    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/delete"
        android:id="@+id/btn_del"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_rowSpan="2"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="0"
        android:id="@+id/btn_0"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/point"
        android:id="@+id/btn_point"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1" />
</GridLayout>